name: layers
version: 0.3
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
synopsis: A prototypical 2d platform game.
description:
    A prototypical 2d platform game.
category: Game
author: Daniel Trstenjak
data-files:
    Ressources/Images/*.png
    Ressources/*.hs
    Ressources/Fonts/*.glf
 
source-repository head
    type: git
    location: https://github.com/dan-t/layers
 
executable layers
    build-depends:
        base >3 && <5,
        mtl >=2.1.3.1 && <2.2,
        pretty-show >=1.6.7 && <1.7,
        cmdargs >=0.10.7 && <0.11,
        data-lens >=2.10.4 && <2.11,
        OpenGLRaw >=1.4.0.0 && <1.5,
        GLFW-b >=0.1.0.5 && <0.2,
        ListZipper >=1.2.0.2 && <1.3,
        composition >=1.0.1.0 && <1.1,
        Gamgine ==0.2.*
    main-is: Main.hs
    buildable: True
    cpp-options: -DCABAL
    cc-options: -Wno-unused-result
    extensions: CPP
    include-dirs: src
    hs-source-dirs: src
    other-modules:
        Paths_layers
        AppData
        Ressources
        GameData.Entity
        GameData.Enemy
        GameData.Level
        GameData.Layer
        GameData.Star
        GameData.Animation
        GameData.Data
        GameData.Boundary
        GameData.Player
        GameData.Platform
        Defaults
        Rendering.Ressources
        Rendering.Renderer
        Entity.Velocity
        Entity.Intersect
        Entity.Render
        Entity.Update
        Entity.Bound
        Entity.Position
        Entity.Id
        States.EditModeRunning
        States.MovingEntity
        States.DefiningAnimation
        States.IntroRunning
        States.CreatingPlatform
        States.GameRunning
        States.ResizingPlatform
        Utils
        Convert.ToGameData
        Convert.ToFileData
        Level.ResolveIntersection
        Level.Reload
        Level.Render
        Level.Update
        LayersArgs
        FileData.Data2
        FileData.Data1ToData2
        FileData.ApplyToEntity
        FileData.Data1
        Callback.Common
        Callback.MouseMove
        Callback.Key
        Callback.MouseButton
        Event
    ghc-options: -pgmPcpphs -optP--cpp
 
 